# fastAPI-boilerPlate

./: .gitignore  README.md  deployment.yaml  pyproject.toml  service.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
fastapi-agent/: .dockerignore  Dockerfile.dev  docker-compose.dev.yml  pyproject.toml
fastapi-agent/.devcontainer/: devcontainer.json
fastapi-agent/app/: main.py
fastapi-agent/app/api/: routes.py  weather.py
fastapi-agent/app/core/: agent_config.py  errors.py  llm_config.py  settings.py  tools.py
fastapi-agent/app/models/: models.py
fastapi-agent/app/services/: weather_agent_service.py
