[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"

requires-python = ">=3.12, <4.0.0"
dependencies = [
    "fastapi[standard] (>=0.121.3,<0.122.0)",
    "langchain (>=1.0.8,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "langchain-openai (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "mypy (>=1.19.0,<2.0.0)"
]

[tool.mypy]
# ðŸ’¡ 'app' í´ë”ë¥¼ ë¶„ì„ ëŒ€ìƒ íŒ¨í‚¤ì§€ë¡œ ì§€ì •
packages = ["app"] 
# ðŸ’¡ Pydantic í”ŒëŸ¬ê·¸ì¸ ì‚¬ìš© (ê¶Œìž¥)
plugins = ["pydantic.mypy"]